feat(system): enhancements and falcon integration
